Fixed inputs width with type date and time on Tablet. #39

--- a/styleguide/source/css/src/assembler/components/forms/_input.scss
+++ b/styleguide/source/css/src/assembler/components/forms/_input.scss
@@ -27,6 +27,14 @@ textarea {
     @include font-size($p);
   }
 
+  @media screen and (min-width: $tab) {
+    &[type=date] {
+      width: 300px;
+    }
+    &[type=time] {
+      width: 150px;
+    }
+  }
 }
 
 .date-padding {
